wip: powerdns: use GeoLite2-Country.mmdb as database

--- a/software/powerdns/template/pdns.conf.jinja2
+++ b/software/powerdns/template/pdns.conf.jinja2
@@ -88,4 +88,6 @@ geo-ip-map-zonefile={{  geo.get('ip-map-zonefile') }}
 # assume you chose a directory.
 geo-maps={{  geo.get('geo-maps') }}
 
+geoip-database-files={{ geo['database'] }}
+
 # -------------------------------------------------------------------------
